Отредактирован вывод отчета

--- a/CarAccountingGibdd/CarAccountingGibdd/Windows/NavWindowAdmin.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Windows/NavWindowAdmin.xaml
@@ -111,7 +111,7 @@
                     
                     <TextBlock Style="{StaticResource TextBlock.H1}"
                                Name="titlePage"
-                               Text="Заявки"
+                               Text="Сотрудники"
                                DockPanel.Dock="Left"/>
 
                     <StackPanel Orientation="Horizontal"
