--- a/CarAccountingGibdd/CarAccountingGibdd/Pages/PagesAdmin/ReportPageAdmin.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Pages/PagesAdmin/ReportPageAdmin.xaml
@@ -18,6 +18,30 @@
                    Margin="0 0 0 35"
                    LastChildFill="False">
 
+            <Grid>
+                <TextBox Width="360"
+                         MinWidth="150"
+                         Name="searchTB"
+                         Tag="Поиск"
+                         MaxLength="70"
+                         ToolTip="Нажмите на значок поиска для обновления данных"/>
+
+                <Button Name="searchBTN"
+                        HorizontalAlignment="Right"
+                        Tag="Search"
+                        Style="{StaticResource Button.Icon.Transperent}"/>
+            </Grid>
+
+            <ComboBox Style="{StaticResource ComboBox.Sorter}"
+                      Name="sorterCB"
+                      Margin="10 0 0 0"
+                      Tag="Сортировка"/>
+
+            <CheckBox Style="{StaticResource CheckBox.Ascending}"
+                      Margin="5 0 24 0"
+                      Name="ascendingCHB"/>
+
+
             <TextBlock Style="{StaticResource TextBlock.Normal}"
                        Text="Дата начала периода:"
                        Width="95"
@@ -56,12 +80,35 @@
                     Click="Add_Click"/>
         </DockPanel>
 
-        <!-- Область вывода информации -->
+        <!-- Контент -->
+        <Grid>
+            <!-- Контент -->
+            <DataGrid Name="itemsDG">
+                <DataGrid.Columns>
+                    <DataGridTextColumn ElementStyle="{StaticResource WrapStyle}" Width="0.4*" Header="Номер заявки" Binding="{Binding ApplcationId}"/>
+                    <DataGridTextColumn ElementStyle="{StaticResource WrapStyle}" Width="0.7*" Header="Департамент" Binding="{Binding DepartmentName}"/>
+                    <DataGridTextColumn ElementStyle="{StaticResource WrapStyle}" Width="1.1*" Header="ФИО владельца" Binding="{Binding OwnerFullname}"/>
+                    <DataGridTextColumn ElementStyle="{StaticResource WrapStyle}" Width="2*" Header="Данные ТС" Binding="{Binding VehicleFullInfo}"/>
+                    <DataGridTextColumn ElementStyle="{StaticResource WrapStyle}" Width="0.7*" Header="Дата подачи" Binding="{Binding DatetimeSupply, StringFormat=dd.MM.yyyy HH:mm}"/>
+                    <DataGridTextColumn ElementStyle="{StaticResource WrapStyle}" Width="0.7*" Header="Дата рассмотрения" Binding="{Binding DatetimeConfirmValue}"/>
+                    <DataGridTextColumn ElementStyle="{StaticResource WrapStyle}" Width="0.6*" Header="Статус" Binding="{Binding StatusName}"/>
+                </DataGrid.Columns>
+            </DataGrid>
+
+            <TextBlock Text="Данных для отчета нет"
+                          Style="{StaticResource TextBlock.H6}"
+                          FontSize="18"
+                          Margin="20 90 0 0"
+                          Visibility="{Binding Items.Count, ElementName=itemsDG, 
+                          Converter={x:Static converters:IntToVisibilityConverter.Instance } }"/>
+        </Grid>
+
+        <!-- Область вывода информации --><!--
         <Grid>
 
-            <!-- Контент -->
+            --><!-- Контент --><!--
             <Grid>
-                <!-- Контент -->
+                --><!-- Контент --><!--
                 <DataGrid Name="itemsDG">
                     <DataGrid.Columns>
                         <DataGridTextColumn Width="500" Header="Показатель" Binding="{Binding Indicator}"/>
@@ -78,7 +125,7 @@
 
             </Grid>
 
-        </Grid>
+        </Grid>-->
 
     </DockPanel>
 
