--- a/CarAccountingGibdd/CarAccountingGibdd/Dialogs/ChangePasswordDialog.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Dialogs/ChangePasswordDialog.xaml
@@ -26,7 +26,7 @@
 
             <TextBlock Style="{StaticResource TextBlock.H6}"
                        TextWrapping="Wrap"
-                       Text="Создайте новый пароль и укажите почту для смены старого пароля"
+                       Text="Укажите почту для смены старого пароля. На нее придет новый пароль"
                        Margin="0 0 0 24"
                        DockPanel.Dock="Top"/>
 
@@ -35,25 +35,6 @@
                      Name="emailTB"
                      behaviors:NoSpacesTextBoxBehavior.DisallowSpaces="True"
                      DockPanel.Dock="Top"/>
-
-            <Grid DockPanel.Dock="Top"
-                  Margin="0 0 0 12">
-
-                <TextBox Tag="Пароль"
-                         Visibility="Hidden"
-                         behaviors:NoSpacesTextBoxBehavior.DisallowSpaces="True"
-                         Name="PassTB"/>
-
-                <components:BindablePasswordBox Password="{Binding Password}"
-                                                Visibility="Visible"
-                                                x:Name="PassPB"/>
-            </Grid>
-            
-
-            <CheckBox Content="Показать пароль"
-                      Name="VisPassCB"
-                      Click="VisibilityPassword_Click"
-                      DockPanel.Dock="Top"/>
 
             <Button Content="Назад"
                     Click="Exit_Click"
