--- a/CarAccountingGibdd/CarAccountingGibdd/Dialogs/InfoViolationsInspectionDialog.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Dialogs/InfoViolationsInspectionDialog.xaml
@@ -93,7 +93,7 @@
                                 DockPanel.Dock="Bottom"
                                 HorizontalAlignment="Right"
                                 Content="Закрыть"
-                                Click="ExitBTN_Click"/>
+                                Click="Exit_Click"/>
 
                     </DockPanel>
                 </Grid>
