--- a/CarAccountingGibdd/CarAccountingGibdd/Controls/ApplicationCard.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Controls/ApplicationCard.xaml
@@ -27,7 +27,7 @@
                     <TextBlock Style="{StaticResource TextBlock.H2}"
                                DockPanel.Dock="Top"
                                Margin="0 0 0 24">
-                    <Run Text="Заявка"/>
+                    <Run Text="Заявление"/>
                     <Run Text="{Binding ApplicationId, StringFormat={}№{0}}"/>
                     </TextBlock>
 
