--- a/CarAccountingGibdd/CarAccountingGibdd/Dialogs/EditDepartmentsDialog.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Dialogs/EditDepartmentsDialog.xaml
@@ -42,7 +42,7 @@
                      Tag="Название"
                      Margin="0 0 0 12"
                      MaxLength="40"
-                     behaviors:TextBoxValidationBehavior.ValidationType="Cyrillic"/>
+                     behaviors:TextBoxValidationBehavior.ValidationType="Description"/>
 
             <components:BindablePhoneBox DockPanel.Dock="Top"
                                          x:Name="phoneTB"
@@ -66,7 +66,7 @@
                     DockPanel.Dock="Bottom"
                     Content="Сохранить"
                     Margin="0 0 0 12"
-                    Click="Add_Click"/>
+                    Click="Edit_Click"/>
 
         </DockPanel>
 
