--- a/CarAccountingGibdd/CarAccountingGibdd/Dialogs/InfoOwnerDialog.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Dialogs/InfoOwnerDialog.xaml
@@ -114,7 +114,7 @@
                                 DockPanel.Dock="Bottom"
                                 HorizontalAlignment="Right"
                                 Content="Закрыть"
-                                Click="ExitBTN_Click"/>
+                                Click="Exit_Click"/>
 
                     </DockPanel>
                 </Grid>
