--- a/CarAccountingGibdd/CarAccountingGibdd/Dialogs/PaymentMessageDialog.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Dialogs/PaymentMessageDialog.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="CarAccountingGibdd.Dialogs.MessageLoadingDialog"
+﻿<Window x:Class="CarAccountingGibdd.Dialogs.PaymentMessageDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,11 +6,13 @@
         xmlns:local="clr-namespace:CarAccountingGibdd.Dialogs"
         mc:Ignorable="d"
         
-        WindowStyle="None"
-        MaxHeight="300" MaxWidth="500"
-        MinHeight="300" MinWidth="500"
+        Style="{StaticResource Window.Ordinary}"
+        MaxHeight="360" MaxWidth="500"
+        MinHeight="360" MinWidth="500"
         WindowStartupLocation="CenterScreen"
+        Title="Формирование платежа"
         Background="#f7f7f7"
+        Closed="Window_Closed"
         
         xmlns:gif="http://wpfanimatedgif.codeplex.com">
 
@@ -36,14 +38,15 @@
             </TextBlock>
 
             <!-- Кнопка -->
-            <Button Style="{StaticResource Button.Primary}"
-                    VerticalAlignment="Bottom"
-                    Content="Закрыть"
+            <Grid>
+                <Button Style="{StaticResource Button.Primary}"
+                    Content="Отменить операцию"
                     Width="200"
                     Margin="0 24 0 0"
-                    Visibility="Collapsed"
-                    Name="exitBTN"
+                    Visibility="Visible"
+                    Name="stopBTN"
                     Click="Exit_Click"/>
+            </Grid>
 
         </DockPanel>
     </DockPanel>
