--- a/CarAccountingGibdd/CarAccountingGibdd/Pages/PagesAdmin/DepartmentPageAmdin.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Pages/PagesAdmin/DepartmentPageAmdin.xaml
@@ -50,12 +50,8 @@
                         Style="{StaticResource Button.Icon.Transperent}"/>
             </Grid>
 
-            <ComboBox Style="{StaticResource ComboBox.Filter}"
-                      Margin="10 0"
-                      Name="filterCB"
-                      Tag="Фильтр"/>
-
             <ComboBox Style="{StaticResource ComboBox.Sorter}"
+                      Margin="10 0 0 0"
                       Name="sorterCB"
                       Tag="Сортировка"/>
 
