--- a/CarAccountingGibdd/CarAccountingGibdd/Windows/NavWindowInspector.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Windows/NavWindowInspector.xaml
@@ -121,7 +121,7 @@
 
                     <TextBlock Style="{StaticResource TextBlock.H1}"
                                Name="titlePage"
-                               Text="Заявки"
+                               Text="Заявления"
                                DockPanel.Dock="Left"/>
 
                     <StackPanel Orientation="Horizontal"
