--- a/CarAccountingGibdd/CarAccountingGibdd/Pages/PagesInspector/ApplicationPageInspector.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Pages/PagesInspector/ApplicationPageInspector.xaml
@@ -67,7 +67,7 @@
                     </ItemsControl>
                 </ScrollViewer>
 
-                <TextBlock Text="Данные о заявках отсутствуют"
+                <TextBlock Text="Данные о заявлениях отсутствуют"
                            Style="{StaticResource TextBlock.H2}"
                            Visibility="{Binding Items.Count, ElementName=cardsIC, 
                            Converter={x:Static converters:IntToVisibilityConverter.Instance } }"/>
